# somatime

./: .gitignore  IMPLEMENTATION_README.md  README.md  docker-compose.yml  작성가이드.md  전체일정.md  프로젝트_맥락.md
backend/: .dockerignore  .env.example  Dockerfile  Procfile  alembic.ini  conftest.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 03f766d71692_initial.py  b1c2d3e4f567_v3_columns.py  c2d3e4f56789_drop_meetings_participant_count.py  d3e4f5678901_drop_organizer_token.py  e4f567890123_add_participants_is_required.py  f5678901234a_allow_empty_title.py  g6789012345b_add_participant_buffer_minutes.py  h7890123456c_drop_meeting_offline_buffer_minutes.py  i8901234567d_drop_meeting_time_window.py
backend/app/: __init__.py  database.py  ics_parser.py  llm_recommender.py  main.py  prompts.py  scheduling_validator.py  schemas.py
backend/app/api/: __init__.py  auth.py  availability.py  meetings.py  oauth.py  participants.py  recommend.py  timetable.py
backend/app/core/: __init__.py  config.py  dependencies.py  errors.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/schemas/: __init__.py  candidate.py  confirm.py  error.py  manual.py  meeting.py  natural_language.py  participant.py  recommendation.py  timetable.py
backend/app/services/: __init__.py  availability.py  expiry.py  google_freebusy.py  ics_parser.py  scheduler.py  timezones.py  tokens.py
backend/tests/: test_scheduling.py
backend/tests/acceptance/: test_acceptance_S1_S11.py  test_v3_scenarios.py
backend/tests/fixtures/: invalid_corrupt.ics  (+3 more)
(+128 files in other folders)
